welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:10: error: ';' expected but 'else' found.
    else if(isBirthday==true){
    ^