welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
  if (speed<=60){
    return 0
  }
  else if (isBirthday==false){
    if (speed<=80 && speed>60){
      return(1)
    }
    else return(2)
    else if(isBirthday==true){
      if (speed<=85 && speed>65){
        return 1
      }
      else return 2
    }
  }
}